force-app/main/default/objects/Pickup_Order__c/Pickup_Order__c.object-meta.xml
<CustomObject>
    <label>Pickup Order</label>
    <nameField>
        <displayFormat>PU-{0}</displayFormat>
        <label>Pickup Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pickup Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>