force-app/main/default/objects/Pickup_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer the order is for</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pickup Orders</relationshipLabel>
    <relationshipName>Pickup_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>