force-app/main/default/objects/Pickup_Order__c/fields/Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Time__c</fullName>
    <label>Pickup Time</label>
    <type>DateTime</type>
</CustomField>