force-app/main/default/objects/Pickup_Order__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>Pickup_Order_Item__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Pickup_Order_Item__c.Pickup_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>