force-app/main/default/objects/Pickup_Order__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Items</label>
    <summaryForeignKey>Pickup_Order_Item__c.Pickup_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>