force-app/main/default/objects/Pickup_Order__c/listViews/All_Orders.listView-meta.xml
<ListView>
    <fullName>All_Orders</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Pickup_Time__c</columns>
    <columns>Total_Items__c</columns>
    <columns>Total_Cost__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Orders</label>
</ListView>